--- a/style.css
+++ b/style.css
@@ -72,6 +72,14 @@ body {
     background-color: #253d0a;
 }
 
+.dot-important-complete {
+    background-color: #3852e4;
+}
+
+.dot-important-incomplete {
+    background-color: #0a123d;
+}
+
 .dots-counter {
     color: white;
 }
